force-app/main/default/objects/vlocity_ps__ServicePlanOutcome__c/vlocity_ps__ServicePlanOutcome__c.object-meta.xml
<CustomObject>
    <description>The desired goals for a client who is receiving services as part of a benefit case</description>
    <label>Outcome</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>