force-app/main/default/objects/vlocity_ps__ServicePlanOutcome__c/fields/vlocity_ps__DueDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>